Rename notes_valeurs_decimales parameter into notes_decimales
