# backend/src/http/routes/api/v1/actions.js
@@ -3,7 +3,7 @@ const Boom = require('boom');
 const Joi = require('joi');
 const _ = require('lodash');
 const { tryAndCatch } = require('../../routes-utils');
-const { paginationValidator, arrayOfValidator, notesValeursDecimalesValidator } = require('./utils/validators');
+const { paginationValidator, arrayOfValidator, notesDecimalesValidator } = require('./utils/validators');
 const buildProjection = require('./utils/buildProjection');
 const createPaginationDTO = require('./dto/createPaginationDTO');
 const createActionDTO = require('./dto/createActionDTO');
@@ -24,7 +24,7 @@ module.exports = ({ db, middlewares }) => {
             nb_avis: Joi.number(),
             fields: arrayOfValidator(Joi.string().required()).default([]),
             ...paginationValidator(),
-            ...notesValeursDecimalesValidator(),
+            ...notesDecimalesValidator(),
         }, { abortEarly: false });
 
         let pagination = _.pick(parameters, ['page', 'items_par_page']);
@@ -46,7 +46,7 @@ module.exports = ({ db, middlewares }) => {
 
         res.json({
             actions: actions.map(action => {
-                return createActionDTO(action, { notes_valeurs_decimales: parameters.notes_valeurs_decimales });
+                return createActionDTO(action, { notes_decimales: parameters.notes_decimales });
             }) || [],
             meta: {
                 pagination: createPaginationDTO(pagination, total)
@@ -58,7 +58,7 @@ module.exports = ({ db, middlewares }) => {
 
         const parameters = await Joi.validate(Object.assign({}, req.query, req.params), {
             id: Joi.string().required(),
-            ...notesValeursDecimalesValidator(),
+            ...notesDecimalesValidator(),
         }, { abortEarly: false });
 
         let action = await collection.findOne({ _id: parameters.id });
@@ -67,7 +67,7 @@ module.exports = ({ db, middlewares }) => {
             throw Boom.notFound('Numéro d\'action inconnu ou action expirée');
         }
 
-        res.json(createActionDTO(action, { notes_valeurs_decimales: parameters.notes_valeurs_decimales }));
+        res.json(createActionDTO(action, { notes_decimales: parameters.notes_decimales }));
 
     }));
 
