# backend/src/http/routes/api/v1/utils/validators.js
@@ -20,9 +20,9 @@ module.exports = {
             items_par_page: Joi.number().min(0).max(2000).default(50),
         };
     },
-    notesValeursDecimalesValidator: () => {
+    notesDecimalesValidator: () => {
         return {
-            notes_valeurs_decimales: Joi.boolean().default(false),
+            notes_decimales: Joi.boolean().default(false),
         };
     },
 };
